# cli-for-ynab

./: .gitignore  Cargo.toml  Makefile  README.md  azure-pipelines.yml
src/: accounts.rs  args.rs  budgets.rs  categories.rs  constants.rs  lib.rs  main.rs  months.rs  output.rs  payees.rs  run.rs  scheduled_transactions.rs  transactions.rs  types.rs  user.rs  ynab_state.rs
ynab_api/: Cargo.toml  README.md
ynab_api/src/: lib.rs
ynab_api/src/apis/: accounts_api.rs  budgets_api.rs  categories_api.rs  client.rs  configuration.rs  deprecated_api.rs  mod.rs  months_api.rs  payee_locations_api.rs  payees_api.rs  scheduled_transactions_api.rs  transactions_api.rs  user_api.rs
ynab_api/src/models/: account.rs  account_response.rs  account_wrapper.rs  accounts_response.rs  accounts_wrapper.rs  budget_detail.rs  budget_detail_response.rs  budget_detail_wrapper.rs  budget_settings.rs  budget_settings_response.rs  budget_settings_wrapper.rs  budget_summary.rs  budget_summary_response.rs  budget_summary_wrapper.rs  bulk_id_wrapper.rs  bulk_ids.rs  bulk_response.rs  bulk_transactions.rs  categories_response.rs  category.rs  category_group.rs  category_group_with_categories.rs  category_groups_wrapper.rs  category_response.rs  category_wrapper.rs  currency_format.rs  date_format.rs  error_detail.rs  error_response.rs  extra.rs  hybrid_transaction.rs  hybrid_transactions_response.rs  hybrid_transactions_wrapper.rs  mod.rs  month_detail.rs  month_detail_response.rs  month_detail_wrapper.rs  month_summaries_response.rs  month_summaries_wrapper.rs  month_summary.rs  (+34 more)
(+4 files in other folders)
