[package]
name = "cli-for-ynab"
version = "0.1.0"
authors = ["Emanuel Borsboom <emanuel@borsboom.io>"]
description = "Command-line interface for YNAB."
autobins = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.32.0", default-features = false, features = ["suggestions", "wrap_help"] }
dotenv = "0.13.0"
hyper = "0.11.6"
tokio-core = "0.1.17"
futures = "0.1.16"
hyper-tls = "0.1.4"
ynab_api = { path = "./ynab_api" }
prettytable-rs = "0.8"
#@@@ atty = "0.2"
lazy_static = "1.2.0"
strum = "0.11.0"
strum_macros = "0.11.0"
serde = "1.0.80"
serde_json = "1.0.32"
dirs = "1.0.4"
regex = "1"
openssl-probe = "0.1.2"

[[bin]]
name = "ynab"
path = "src/main.rs"
