[package]
name = "ynab_api"
version = "0.1.0"
authors = ["Swagger Codegen team and contributors"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.11.6"
url = "1.5"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.11.0"
strum_macros = "0.11.0"

[dev-dependencies]
tokio-core = "*"

#@@@ DISABLE WARNINGS WHEN BUILDING YNAB-API
